Adding image folder with all photos and updated Program file to include the images

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Kelly+Slab&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=call" />
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -29,7 +30,7 @@
                     <li><a href="About.html">About</a></li>
                     <li><a href="Program.html">Program Brochure</a></li>
                     <li><a href="Guru-Musicians.html">Guru & Musicians</a></li>
-                    <li><a href="Credit.html">The Credits</a></li>
+                    <li><a href="Gallery.html">Gallery</a></li>
             </ul>
               
             <div class="nav_phone">
@@ -48,12 +49,16 @@
                     Kirti and Abhi along  with <br>
                     Natyam Academy of Performing Arts <br>cordially invite you to <br>Arangetram of 
                 </p>
+                <br>
                 <p class="invite-name">
                     Ketki Mahurkar
                 </p>
+                <br>
                 <p class="invite-date">
-                    On Saturday, August 16th 2025 at <br>
-                    The Plaza Theater,Garland
+                    On Saturday, August 16th 2025, <br>
+                    3.30 - 7PM at <br>
+                    The Plaza Theater,<br>
+                    521 W State St, 75040, Garland TX
                 </p>
             </div>
  
