--- a/Gallery.html
+++ b/Gallery.html
@@ -31,5 +31,51 @@
             </ul>
         </div>
     </header>
+
+  <!-- <style>
+    body {
+      margin: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      background: #111;
+    }
+
+    .slideshow {
+      position: relative;
+      width: 600px;
+      height: 400px;
+      overflow: hidden;
+    }
+
+    .slide {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      opacity: 0;
+      animation: fade 9s infinite;
+      object-fit: cover;
+    }
+
+    .slide:nth-child(1) { animation-delay: 0s; }
+    .slide:nth-child(2) { animation-delay: 3s; }
+    .slide:nth-child(3) { animation-delay: 6s; }
+
+    @keyframes fade {
+      0% { opacity: 0; }
+      10% { opacity: 1; }
+      30% { opacity: 1; }
+      40% { opacity: 0; }
+      100% { opacity: 0; }
+    }
+  </style> -->
+
+  <div class="slideshow">
+    <!-- <img src="https://your-bucket.s3.amazonaws.com/image1.jpg" class="slide" alt="Image 1">
+    <img src="https://your-bucket.s3.amazonaws.com/image2.jpg" class="slide" alt="Image 2">
+    <img src="https://your-bucket.s3.amazonaws.com/image3.jpg" class="slide" alt="Image 3"> -->
+  </div>
+
 </body>
 </html>
