About page, Guru page and styling changes

--- a/About.html
+++ b/About.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
      <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Kelly+Slab&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Upright:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -26,43 +27,41 @@
                         <li><a href="#">About</a></li>
                         <li><a href="Program.html">Program Brochure</a></li>
                         <li><a href="Guru-Musicians.html">Guru & Musicians</a></li>
-                        <li><a href="Credit.html">The Credits</a></li>
+                        <li><a href="Gallery.html">Gallery</a></li>
             </ul>
         </div>
     </header>
 
     <div class="about-container">
-        <u><h4>BHARATNATYAM</h4></u>  <br>
+        <b><h4>HISTORY OF BHARATNATYAM</h4></b>  <br>
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut 
-            aliquip ex ea commodo consequat.
-            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum 
-            dolore eu fugiat nulla pariatur.
-            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est 
+            Known to be one of India’s oldest yet still practiced dance forms, Bharatanatyam hails from the state of Tamil Nadu in South India. 
+            The name of the art is drawn from Bharata, a sage who wrote the treatise Nātyaśāstra which was exposed to his hundred sons. Partly 
+            responsible for preserving Bharatanatyam was the institution of the Devidāsīs, who were servants dedicated to God through dance and music. 
+            Many young dancers grew up in the temples telling stories of mythology to audiences. Kings and royal courts had a great influence in the 
+            progression of the dance form, particularly during the Marata rule of King Sahaji and his Marathi Padamas. Bharatanatyam reached its 
+            permanent structure from the Tanjore Quartet: royal musicians in the court of Raja Sarfoji. The concepts of Bharatanatyam have certainly 
+            traveled far from Ancient India to its place on the global dance stage. 
+        </p>
+        <br>
+        <b><h4>ARANGETRAM</h4></b><br>
+        <p>
+            The literal definition of Arangetram means “rising to the stage”, an allusion to the debut of a dancer or singer. An Arangetram provides 
+            a stage to showcase the development of an artist with the blessing of their Guru(s) and is a symbol of accomplishment. In the case of 
+            Bharatanatyam, this typically means the dancer has completed a mārgam or repertoire of about eight songs, including some traditional 
+            dances like Alarippu, Jatiswaram, and Thillana. Dance is accompanied by music, commonly in the form of instruments like the mrdangam, 
+            veena, sruti, and cymbals. Thank you for participating in this lifelong achievement!
             laborum. 
         </p>
         <br>
-        <u><h4>ARANGETRAM</h4></u><br>
+        <b><h4>KETKI</h4> </b><br>
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut 
-            aliquip ex ea commodo consequat.
-            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum 
-            dolore eu fugiat nulla pariatur.
-            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est 
-            laborum. 
-        </p>
-        <br>
-        <u><h4>KETKI</h4> </u><br>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut 
-            aliquip ex ea commodo consequat.
-            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum 
-            dolore eu fugiat nulla pariatur.
-            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est 
-            laborum. 
+            Ketki Mahurkar started Bharatanatyam at the age of five under the tutelage of Shreemati Pavitra Krishnan in Torrance, California. 
+            As she studied there, she fell deeper in love with the world of dance and took classes, not only in Bharatanatyam, but also in a mix of 
+            hip hop, ballet, and bollywood. After moving to the DFW area in 2016, Ketki immediately started learning again, this time with 
+            Shreemati Anjali Nandan. She is now completing her 12th year of Bharatanatyam and has attained a basic certification in the art. 
+            Ketki enjoys sharing the beauty of Bharatanatyam with others as well and frequently assists in teaching younger students of her Guru. 
+            Currently, she is diving into the college admissions process with hopes of getting a degree related to graphic design.  
         </p>
     </div>
     
