--- a/Gallery.html
+++ b/Gallery.html
@@ -25,9 +25,9 @@
            <ul class="nav-links" id="navLinks">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="About.html">About</a></li>
-                    <li><a href="#">Program Brochure</a></li>
+                    <li><a href="Program.html">Program Brochure</a></li>
                     <li><a href="Guru-Musicians.html">Guru & Musicians</a></li>
-                    <li><a href="Gallery.html">Gallery</a></li>
+                    <li><a href="#">Gallery</a></li>
             </ul>
         </div>
     </header>
