--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Kelly+Slab&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=call" />
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Upright:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -49,11 +50,11 @@
                     Kirti and Abhi along  with <br>
                     Natyam Academy of Performing Arts <br>cordially invite you to <br>Arangetram of 
                 </p>
-                <br>
+                <!-- <br> -->
                 <p class="invite-name">
                     Ketki Mahurkar
                 </p>
-                <br>
+                <!-- <br> -->
                 <p class="invite-date">
                     On Saturday, August 16th 2025, <br>
                     3.30 - 7PM at <br>
