fix for home page overlap and adding Gallery page

--- a/Gallery.html
+++ b/Gallery.html
@@ -70,12 +70,23 @@
       100% { opacity: 0; }
     }
   </style> -->
-
+  <h2 class="header-page">Gallery</h2>
   <div class="slideshow">
     <!-- <img src="https://your-bucket.s3.amazonaws.com/image1.jpg" class="slide" alt="Image 1">
     <img src="https://your-bucket.s3.amazonaws.com/image2.jpg" class="slide" alt="Image 2">
     <img src="https://your-bucket.s3.amazonaws.com/image3.jpg" class="slide" alt="Image 3"> -->
+    <img src="image/Aigiri_Nandini.jpg" class="slide" alt="Image 1">
+      <img src="image/Jatiswaram.jpg" class="slide" alt="Image 1">
+        <img src="image/Mallari.jpg" class="slide" alt="Image 1">
+          <!-- <img src="image/Mridangist.JPG" class="slide" alt="Image 1"> -->
+            <!-- <img src="image/Omkar_Swarupa.jpg" class="slide" alt="Image 1">
+              <img src="image/Pranavakaaram.jpg" class="slide" alt="Image 1">
+                <img src="image/Shankara_Sri_Giri.jpg" class="slide" alt="Image 1"> -->
+    <!-- <img src="image/D1.png" class="slide" alt="Image 1"> -->
+    <!-- <img src="image/Flutist.jpg" class="slide" alt="Image 2"> -->
+    <!-- <img src="image/Rhythm_Pads.jpg" class="slide" alt="Image 3"> -->
+  
   </div>
-
+ <script src="menuscript.js"></script>
 </body>
 </html>
