--- a/Guru-Musicians.html
+++ b/Guru-Musicians.html
@@ -31,6 +31,8 @@
     </header>
 
     <article>
+        <BR>
+          <h2 class="header-page">Guru and Musicians</h2>
         <div class="musician-container">
             <img class="musician-guru-img" src="image/Guru.jpg">
             <p class="musician-p">
