fixing typos and home page gap issue

--- a/About.html
+++ b/About.html
@@ -41,7 +41,7 @@
             Many young dancers grew up in the temples telling stories of mythology to audiences. Kings and royal courts had a great influence in the 
             progression of the dance form, particularly during the Marata rule of King Sahaji and his Marathi Padamas. Bharatanatyam reached its 
             permanent structure from the Tanjore Quartet: royal musicians in the court of Raja Sarfoji. The concepts of Bharatanatyam have certainly 
-            traveled far from Ancient India to its place on the global dance stage. 
+            traveled far from Ancient India to their place on the global dance stage. 
         </p>
         <br>
         <b><h4>ARANGETRAM</h4></b><br>
@@ -50,8 +50,7 @@
             a stage to showcase the development of an artist with the blessing of their Guru(s) and is a symbol of accomplishment. In the case of 
             Bharatanatyam, this typically means the dancer has completed a mārgam or repertoire of about eight songs, including some traditional 
             dances like Alarippu, Jatiswaram, and Thillana. Dance is accompanied by music, commonly in the form of instruments like the mrdangam, 
-            veena, sruti, and cymbals. Thank you for participating in this lifelong achievement!
-            laborum. 
+            veena, sruti, and cymbals. Thank you for participating in this lifelong achievement! 
         </p>
         <br>
         <b><h4>KETKI</h4> </b><br>
