--- a/Program.html
+++ b/Program.html
@@ -56,7 +56,7 @@
             <span> Second half of performance </span>
             <br>
             <span class="program-time"><b>6.45- 7.00pm :</b></span>
-            <span>Felicitation and vote of Thanks followed by dinner</span>
+            <span>Vote of Thanks followed by dinner</span>
             <br>
             <br>
             <h4> Performances</h4>
