--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
                     <li><a href="Gallery.html">Gallery</a></li>
             </ul>
               
-            <div class="nav_phone">
+            <!-- <div class="nav_phone">
                 <span class="phone-icon">call</span>
                 <span class="contact-text">+1 (111) 1111-1111</span>
-            </div>
+            </div> -->
         </div> 
     </header>
 
