--- a/Gallery.html
+++ b/Gallery.html
@@ -32,61 +32,28 @@
         </div>
     </header>
 
-  <!-- <style>
-    body {
-      margin: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      background: #111;
-    }
-
-    .slideshow {
-      position: relative;
-      width: 600px;
-      height: 400px;
-      overflow: hidden;
-    }
-
-    .slide {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      opacity: 0;
-      animation: fade 9s infinite;
-      object-fit: cover;
-    }
-
-    .slide:nth-child(1) { animation-delay: 0s; }
-    .slide:nth-child(2) { animation-delay: 3s; }
-    .slide:nth-child(3) { animation-delay: 6s; }
-
-    @keyframes fade {
-      0% { opacity: 0; }
-      10% { opacity: 1; }
-      30% { opacity: 1; }
-      40% { opacity: 0; }
-      100% { opacity: 0; }
-    }
-  </style> -->
   <h2 class="header-page">Gallery</h2>
-  <div class="slideshow">
+  
+    <div class="slideshow-container">
+     <img id="slideshow-image" src="image/Aigiri_Nandini.jpg" alt="Slideshow Image">
+<!-- <div class="slideshow"> -->
     <!-- <img src="https://your-bucket.s3.amazonaws.com/image1.jpg" class="slide" alt="Image 1">
     <img src="https://your-bucket.s3.amazonaws.com/image2.jpg" class="slide" alt="Image 2">
     <img src="https://your-bucket.s3.amazonaws.com/image3.jpg" class="slide" alt="Image 3"> -->
-    <img src="image/Aigiri_Nandini.jpg" class="slide" alt="Image 1">
+    <!-- <img src="image/Aigiri_Nandini.jpg" class="slide" alt="Image 1">
       <img src="image/Jatiswaram.jpg" class="slide" alt="Image 1">
-        <img src="image/Mallari.jpg" class="slide" alt="Image 1">
-          <!-- <img src="image/Mridangist.JPG" class="slide" alt="Image 1"> -->
-            <!-- <img src="image/Omkar_Swarupa.jpg" class="slide" alt="Image 1">
-              <img src="image/Pranavakaaram.jpg" class="slide" alt="Image 1">
-                <img src="image/Shankara_Sri_Giri.jpg" class="slide" alt="Image 1"> -->
-    <!-- <img src="image/D1.png" class="slide" alt="Image 1"> -->
-    <!-- <img src="image/Flutist.jpg" class="slide" alt="Image 2"> -->
-    <!-- <img src="image/Rhythm_Pads.jpg" class="slide" alt="Image 3"> -->
+        <img src="image/Mallari.jpg" class="slide" alt="Image 1"> -->
   
+    <div class="controls">
+      <button onclick="prevImage()">⏪ Left</button>
+      <button onclick="pauseSlideshow()">⏸️ Pause</button>
+      <button onclick="playSlideshow()">▶️ Play</button>
+      <button onclick="nextImage()">⏩ Right</button>
+    </div>
   </div>
+
  <script src="menuscript.js"></script>
+ <script src="gallerybuttons.js"></script>
+
 </body>
 </html>
