Adding downsized images

--- a/Program.html
+++ b/Program.html
@@ -66,10 +66,10 @@
                 <div class="dance_details">
                     <h2>MALLARI</h2>
                     <br>
-                    <p class="musician-p">Mallari is an invocatory piece that’s origin comes from temples in which a diety 
+                    <p class="musician-p">Mallari is an invocatory piece whose origin comes from temples wherein a diety 
                         was carried in a procession. The rhythmic beats guide the dancer’s steps using only sound and 
-                        no words. Commonly done in the beginning of the performance, the Mallari includes a greeting 
-                        to the gods, guru, and audience.
+                        no words. Commonly performed in the beginning of the performance, the Mallari includes a greeting 
+                        to the Gods, Guru, and audience.
                     </p>
                 </div>
             </div>
