--- a/Guru-Musicians.html
+++ b/Guru-Musicians.html
@@ -107,7 +107,7 @@
             <img class="musician-img" src="image/Rhythm_Pads.jpg">
             <p class="musician-p">
                 <b class="musician_type">RHYTHM PADS</b> <br>
-                G LAKSHMINARAYAN Lakshminarayan started musical journey from early childhood and began 
+                G Lakshminarayan started musical journey from early childhood and began 
                 his performances in high school. He studied under Guru Vid Shree SV Balakrishna while 
                 also learning Kanjira from Vid Shree N Amrit. Lakshinarayan accompanied many Senior 
                 artists of Classical Music and Dance in many prestigious Sabhas, and collaborated with 
