adding downsized Guru photo

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     On Saturday, August 16th 2025, <br>
                     3.30 - 7PM at <br>
                     The Plaza Theater,<br>
-                    521 W State St, 75040, Garland TX
+                    521 W State St, Garland TX, 75040
                 </p>
             </div>
  
